# Vidocq

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  simulate_expert.py  start_vidocq.bat  verify_refactor.py
docs/: GUIDE_UTILISATEUR.md
frontend/: app.js  dashboard.html  graph.html  index.html  styles.css
shadowmap/: README.md  docker-compose.yml
shadowmap/src/: config.py
shadowmap/src/api/: main.py  (+2 more)
src/: __init__.py  config.py
src/api/: main.py  routes.py
src/brain/: __init__.py  brief_generator.py  contradiction_detector.py  core_logic.py  ecosystem.py  hidden_network_detector.py  negative_space.py  predictive_risk.py  reporter.py  source_analyst.py  wargaming.py
src/core/: __init__.py  bayesian_fusion.py  cross_client_alerts.py  doctrine.py  embedding.py  evolving_ontology.py  exceptions.py  feedback.py  language_detection.py  logging.py  models.py  ontology.py  provenance.py  retry.py  risk_scoring.py  scoring.py  sources.py  temporal_versioning.py  training.py  unified_scoring.py  watchlist.py
src/ingestion/: chunking.py  connectors.py  parser.py  pdf_parser.py  stealth.py  tasks.py
src/pipeline/: analyst.py  coverage_analysis.py  discovery.py  discovery_v2.py  discovery_v3.py  extractor.py  master_orchestrator.py  prompts.py  relevance_filter.py  report.py  tasks.py  unified_pipeline.py  verification.py
src/scripts/: debug_extraction.py  test_pipeline.py
src/storage/: cache.py  dlq.py  graph.py  vector.py
tests/: __init__.py  conftest.py
tests/core/: test_scoring.py
(+16 files in other folders)
